CIT-32 implemented and finished tree crud