@@ -1,9 +1,11 @@
 package com.citronix.citronix.service;
 
+import com.citronix.citronix.dto.FieldDto;
 import com.citronix.citronix.dto.TreeDto;
 import com.citronix.citronix.enums.TreeStatus;
 import com.citronix.citronix.exceptions.EntitesCustomExceptions.NoFieldWasFound;
 import com.citronix.citronix.helper.Validator;
+import com.citronix.citronix.mapper.FieldMapper;
 import com.citronix.citronix.mapper.TreeMapper;
 import com.citronix.citronix.model.Field;
 import com.citronix.citronix.model.Tree;
@@ -13,7 +15,10 @@ import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -22,6 +27,8 @@ public class TreeServices {
     private TreeRepository treeRepository;
     @Autowired
     private TreeMapper treeMapper;
+    @Autowired
+    private FieldMapper fieldMapper;
     @Autowired
     private FieldRepository fieldRepository;
     @Autowired
@@ -33,20 +40,52 @@ public class TreeServices {
         List<Tree> trees = treeDtos.stream().map(treeDto -> {
             validator.validatePlantationDate(treeDto);
             validator.validateProductivity(treeDto);
-            TreeStatus status = null;
-            if (treeDto.age()>20){
-                status = TreeStatus.NONPRODUCTIVE;
-            }else{
-                status = TreeStatus.PRODUCTIVE;
-            }
-            Tree tree = new Tree(null , treeDto.age() , treeDto.plantationDate() , treeDto.productivity() , status,field );
+            TreeStatus status = (treeDto.age() > 20) ? TreeStatus.NONPRODUCTIVE : TreeStatus.PRODUCTIVE;
+            double productivity = validator.validateProductivity(treeDto);
+            Tree tree = Tree.builder().age(treeDto.age()).plantationDate(treeDto.plantationDate()).productivity(productivity).status(status).field(field).build();
             return tree;
         }).toList();
         trees = treeRepository.saveAll(trees);
-        List<TreeDto> treesDtos = trees.stream().map(tree -> {
-            TreeDto treeDto = treeMapper.treeToTreeDto(tree);
+        return trees.stream().map(tree -> {
+            FieldDto fieldDto = fieldMapper.fieldToFieldDto(tree.getField());
+            TreeDto treeDto = new TreeDto(tree.getId() , tree.getAge() , tree.getPlantationDate() , tree.getProductivity() , tree.getStatus() , fieldDto);
             return treeDto;
-        }).toList();
-        return treesDtos;
+        }).collect(Collectors.toList());
+    }
+    public TreeDto update(TreeDto treeDto) {
+        Tree existingTree = treeRepository.findById(treeDto.id())
+                .orElseThrow(() -> new NoFieldWasFound("No tree was found with this ID: " + treeDto.id()));
+        Field field = fieldRepository.findById(treeDto.fieldDto().id())
+                .orElseThrow(() -> new NoFieldWasFound("No field was found with this ID: " + treeDto.fieldDto().id()));
+        validator.validatePlantationDate(treeDto);
+        double productivity = validator.validateProductivity(treeDto);
+        TreeStatus status = (treeDto.age() > 20) ? TreeStatus.NONPRODUCTIVE : TreeStatus.PRODUCTIVE;
+        existingTree.setAge(treeDto.age());
+        existingTree.setPlantationDate(treeDto.plantationDate());
+        existingTree.setProductivity(productivity);
+        existingTree.setStatus(status);
+        existingTree.setField(field);
+        Tree updatedTree = treeRepository.save(existingTree);
+        FieldDto fieldDto = fieldMapper.fieldToFieldDto(updatedTree.getField());
+        return new TreeDto(
+                updatedTree.getId(),
+                updatedTree.getAge(),
+                updatedTree.getPlantationDate(),
+                updatedTree.getProductivity(),
+                updatedTree.getStatus(),
+                fieldDto
+        );
+    }
+    public void delete(UUID id){
+        Tree tree = treeRepository.findById(id).orElseThrow(()-> new IllegalArgumentException("No tree was found with this Id : " + id));
+        treeRepository.delete(tree);
+    }
+    public List<TreeDto> findAllTreesByStatus(TreeStatus status) {
+        List<TreeDto> trees = treeRepository.findAllByStatus(status).stream().map(tree -> {
+            FieldDto fieldDto = fieldMapper.fieldToFieldDto(tree.getField());
+            TreeDto treeDto = new TreeDto(tree.getId() , tree.getAge() , tree.getPlantationDate() , tree.getProductivity() , tree.getStatus() , fieldDto);
+            return treeDto;
+        }).collect(Collectors.toList());
+        return trees;
     }
 }
